--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.datasource.password = 2202phoaT
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=your-email@gmail.com
+#spring.mail.password=your-email-password
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#
+#twilio.account_sid=your_account_sid
+#twilio.auth_token=your_auth_token
+#twilio.phone_number=your_twilio_phone_number
