--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #twilio.account_sid=your_account_sid
 #twilio.auth_token=your_auth_token
 #twilio.phone_number=your_twilio_phone_number
+
+walletId=12345
