--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #twilio.phone_number=your_twilio_phone_number
 
 walletId=12345
+
+razorpay.api.key=your_razorpay_api_key
+razorpay.api.secret=your_razorpay_api_secret
+
