--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 walletId=12345
 
+# Stripe API key
+stripe.api.key=your_stripe_api_key
+
+# Razorpay API key
 razorpay.api.key=your_razorpay_api_key
+
+# Razorpay API secret
 razorpay.api.secret=your_razorpay_api_secret
 
